# BloodGasCases

./: .gitignore  EXPLORER_FIO2_FIX_COMPLETE.md  EXPLORER_REDESIGN_SUMMARY.md  FINAL_FIX_SUMMARY.md  FIO2_PO2_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICK_SUMMARY.md  README.md  VALIDATION_RESULTS.md  real_world_abg_examples.md  reformat_labs.py  test_explorer_complete.html
.github/workflows/: deploy-pages.yml
bloodgas_generator/: BEFORE_AND_AFTER.md  BUG_FIX_SUMMARY.md  EXPLORER_FEATURE_SUMMARY.md  FIX_VERIFICATION_README.md  IMPLEMENTATION_NOTES.md  OXYGENATION_EXPLANATION.md  README.md  TESTING_FIO2_FIX.md  demo_fio2_fix.html  test_fio2_response.html  verify_fix.js
bloodgas_generator/frontend/: app.js  bloodgas.bundle.js  explorer.html  explorer.js  generator.html  index.html  styles.css  test_fio2_explorer.html
bloodgas_generator/python/: README.md  pyproject.toml
bloodgas_generator/python/bloodgas/: __init__.py  generator.py  interpretation.py
bloodgas_generator/python/bloodgas/models/: __init__.py  blood_gas_result.py  disorders.py  patient_state.py
bloodgas_generator/python/bloodgas/physiology/: __init__.py  acid_base.py  electrolytes.py  oxygenation.py  variability.py
bloodgas_generator/python/bloodgas/scenarios/: __init__.py  clinical_conditions.py  scenario_mapper.py
bloodgas_generator/shared/schemas/: blood_gas_result.json  enums.json
bloodgas_generator/typescript/: package.json  tsconfig.json
bloodgas_generator/typescript/src/: conditions.ts  generator.ts  index.ts  physiology.ts  types.ts
